fixed layout issue on intro section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
 
 #introduction-box {
   background-color: #f2bd1d;
-  height: 300px;
+  
   text-align: center;
   padding: 100px;
 }
